# TOGA2

./: .gitignore  .gitmodules  Makefile  README.md  __version__.py  changelog.md  check_dependencies.py  conda.yaml  dockerfile  requirements.txt  setup.py  toga2.py  versioneer.py
.github/workflows/: ci.yml
_extra/: toga2_combine_plots.py
conda/: _meta.yaml  build.sh  conda_build_config.yaml  meta.yaml
nextflow_configs/: README.md  execute_joblist.nf  orthology.config
src/cython/: string_splitter.pyx
src/python/: cesar_exec.py  cesar_preprocess.py  chain_runner.py  classify_chains.py  configured_run.py  feature_extractor.py  fine_orthology_resolver.py  get_contig_sizes.py  predict_with_spliceai.py  toga_configured.py  train_model.py
src/python/modules/: __init__.py  _run_postoga.py  bed_hdf5_index.py  cesar_wrapper_constants.py  cesar_wrapper_executables.py  chain_bst_index.py  codon_alignment.py  conservation_summary.py  constants.py  defaults.py  exon_fasta_to_twobit.py  filter_loss_file.py  filter_output_bed.py  filter_ref_bed.py  final_orthology_aggregator.py  final_orthology_aggregator_old.py  finalise_orthology_files.py  gene_tree_summary.py  get_contig_sizes.py  get_names_from_bed.py  index_gzipped_fasta.py  infer_query_genes.py  initial_orthology_resolver.py  input_producer.py  integrate.py  intronIC_to_hdf5.py  intron_gain_check.py  isoforms_for_gtf.py  make_ucsc_report.py  merge_chains_output.py  overlap_select.py  pairwise_fasta_to_hdf5.py  parallel_jobs_manager.py  prepare_pseudogene_track.py  preprocessing.py  processed_segment.py  results_checks.py  shared.py  spliceai_manager.py  stitch_fragments.py  (+4 more)
src/python/schedulers/: cesar_job_scheduler.py  chain_feature_scheduler.py  preprocess_scheduler.py
src/python/utils/: toga_sanity_checks.py
src/rust/: Cargo.toml
src/rust/src/: lib.rs
supply/: apptainer.def  decoration.as  project_args.tsv
supply/containers/: README.md  apptainer.def  apptainer_slurm.def
supply/reference_annotation/: README.md
