[package]
name = "rust"
version = "2.0.5"
edition = "2021"
authors = ["Yury V. Malovichko <yury.malovichko@senckenberg.de>"]

[dependencies]
anyhow = "1.0.98"
bed2gff = "0.1.5"
bed2gtf = "1.9.3"
bigtools = "0.5.6"
chaintools = { git = "https://github.com/ReverendCasy/chaintools", version = "0.1.82" }
clap = { version = "4.5.42", features = ["derive"] }
colorconv = "0.1.1"
cubiculum = "0.1.52"
flate2 = "1.1.2"
fontdb = "0.23.0"
fxhash = "0.2.1"
get-size = "0.1.4"
memchr = "2.7.5"
num-traits = "0.2.19"
packbed = "0.0.8"
phf = { version = "0.13.1", features = ["macros"] }
quick-xml = "0.38.3"
regex = "1.11.2"
resvg = "0.45.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
svg = "0.18.0"
svgdom = "0.18.0"
tiny-skia = "0.11.4"
usvg = "0.45.1"


[[bin]]
edition = "2021"
name = "bed12ToFraction"
path = "src/bin/bed12ToFraction.rs"

[[bin]]
edition = "2021"
name = "chain_filter"
path = "src/bin/chain_filter.rs"

[[bin]]
edition = "2021"
name = "feature_extraction"
path = "src/bin/feature_extraction.rs"

[[bin]]
edition = "2021"
name = "filter_fasta"
path = "src/bin/filter_fasta.rs"

[[bin]]
edition = "2021"
name = "bed2gxf"
path = "src/bin/bed2gxf.rs"

[[bin]]
edition = "2021"
name = "utr_projector"
path = "src/bin/utr_projector.rs"

[[bin]]
edition = "2021"
name = "add_decorations"
path = "src/bin/add_decorations.rs"

[[bin]]
edition = "2021"
name = "combine_plots"
path = "src/bin/combine_plots.rs"

[[bin]]
edition = "2021"
name = "intograte"
path = "src/bin/intograte.rs"

[[bin]]
edition = "2021"
name = "exonMetaToBed12"
path = "src/bin/exon_meta_to_bed12.rs"